# imgtoy

./: CMakeLists.txt
shader/: fullbright_texture_frag.glsl
src/: image.cpp  image.h  log.cpp  log.h  main.cpp  program.cpp  texture.cpp  util.cpp  util.h
